--- a/docker/nginx.config
+++ b/docker/nginx.config
@@ -1,6 +1,7 @@
 server {
     listen      *:80;
-    server_name api.io.mi.com ximalaya.com www.ximalaya.com api.ximalaya.com mobile.ximalaya.com open.ximalaya.com $DOMAIN_NAME;
+    #server_name api.io.mi.com ximalaya.com www.ximalaya.com api.ximalaya.com mobile.ximalaya.com open.ximalaya.com $DOMAIN_NAME;
+	server_name api.ximalaya.com c.ctc.w.ximalaya.com api2.ximalaya.com c2.ctc.w.ximalaya.com $DOMAIN_NAME;
     root        $MIR_WWW_PATH;
     index       index.php index.html index.htm;
     access_log  /var/log/nginx/radio_access.log;
